[package]
name = "example_report"
version = "0.1.0"
edition = "2021"

[dependencies]
tera = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "2.1", features = ["json"] }
clap = { version = "4.5.30", features = ["derive"] }
